add send verification email API (#154)
